Small changes to the users table styling. add: Added scrolling if there are a lot of users. Made the scrollingbar invisible. fix: removed the overflow hidden from the grid container.

--- a/css/dashboard/users-table.css
+++ b/css/dashboard/users-table.css
@@ -1,8 +1,13 @@
 /* Users Table Grid */
+#main-content {
+    overflow: scroll;
+}
+#main-content::-webkit-scrollbar {
+    display: none;
+}
 #grid-container {
     display: grid;
     grid-template-columns: 50px auto auto 150px;
-    overflow: hidden;
 }
 .grid-item:nth-child(-n+4) {
     font-size: 20px;
